--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "date-fns": "^3.6.0",
     "html2canvas": "^1.4.1",
     "jspdf": "^2.5.2",
+    "jszip": "^3.10.1",
     "leaflet.heat": "^0.2.0",
     "lucide-react": "^0.447.0",
     "react": "^18.3.1",
