--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react-router-dom": "^6.27.0",
     "react-table": "^7.8.0",
     "recharts": "^2.13.0",
+    "rut.js": "^2.1.0",
     "tailwind-merge": "^2.5.3",
     "tailwindcss-animate": "^1.0.7"
   },
